data-capture/run/data-capture-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-capture
  labels:
    app: data-capture
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-capture
  template:
    metadata:
      labels:
        app: data-capture
    spec:
      containers:
        - image: cloudgitlab.dslab.ece.ntua.gr:5050/pkranas/data-capture:latest
          imagePullPolicy: Always
          name: data-capture
          volumeMounts:
            - name: data-capature-storage
              mountPath: /datasets
          ports:
            - containerPort: 54735  
          resources: 
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
      restartPolicy: Always
      imagePullSecrets:
        - name: ihelpgit 
      volumes: 
        - name: data-capature-storage 
          persistentVolumeClaim:
            claimName: data-capature-nfs-pvc
