data-capture/run/data-capture-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-capture-np
spec:
  type: NodePort
  selector:
    app: data-capture
  ports:
    - name: "54735"
      protocol: TCP	
      port: 54735
      targetPort: 54735
      nodePort: 30007
