data-capture/run/data-capture-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ir-lxs
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule  
      match: Host(`lxs.ihelp-project.eu`) && PathPrefix(`/ihelp/datacapture`)
      services:
      - kind: Service
        name: data-capture-capture-service
        passHostHeader: true
        port: 54735
    - kind: Rule  
      match: Host(`lxs.ihelp-project.eu`) && PathPrefix(`/ihelp/process`)
      services:
      - kind: Service
        name: ihelp-store-rest-service
        passHostHeader: true
        port: 54735
    - kind: Rule  
      match: Host(`lxs.ihelp-project.eu`) && PathPrefix(`/ihelp/metainfo`)
      services:
      - kind: Service
        name: ihelp-store-rest-service
        passHostHeader: true
        port: 54735
    - kind: Rule  
      match: Host(`lxs.ihelp-project.eu`) && PathPrefix(`/ihelp/baseR4`)
      services:
      - kind: Service
        name: ihelp-store-rest-service
        passHostHeader: true
        port: 54735
    - kind: Rule  
      match: Host(`lxs.ihelp-project.eu`) && PathPrefix(`/ihelp/userenrollment`)
      services:
      - kind: Service
        name: user-enrollment-service
        passHostHeader: true
        port: 54735        
    - kind: Rule  
      match: Host(`lxs.ihelp-project.eu`) && PathPrefix(`/ihelp/monitoringmessages`)
      services:
      - kind: Service
        name: user-enrollment-service
        passHostHeader: true
        port: 54735                
    - kind: Rule  
      match: Host(`lxs.ihelp-project.eu`) && PathPrefix(`/ihelp/modelmanagerparams`)
      services:
      - kind: Service
        name: user-enrollment-service
        passHostHeader: true
        port: 54735                
  tls:
    certResolver: myresolver
